Fix bug: Modal not clear when hidden

--- a/Views/Agent/Create.cshtml
+++ b/Views/Agent/Create.cshtml
@@ -1,4 +1,4 @@
-@model SHS.Models.ViewModel.AgentViewModel
+@model SHS.Models.ViewModels.AgentViewModel
 
 <div class="px-5 py-5">
     <form action="/Agent/Create" enctype="multipart/form-data" method="POST">
@@ -7,7 +7,7 @@
             <label class="col-sm-2 col-form-label">姓名</label>
             <div class="col-sm-6">
                 <input class="form-control" asp-for="Name"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Name"></span>
             </div>
         </div>
         <!-- 身份證字號 -->
@@ -15,7 +15,7 @@
             <label class="col-sm-2 col-form-label">身份證字號</label>
             <div class="col-sm-6">
                 <input class="form-control" asp-for="IdNo"/>
-                <span asp-validation-for="IdNo" class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="IdNo"></span>
             </div>
         </div>
         <!-- 業務員編號 -->
@@ -23,7 +23,7 @@
             <label class="col-sm-2 col-form-label">業務員編號</label>
             <div class="col-sm-6">
                 <input class="form-control" asp-for="AgentNo"/>
-                <span asp-validation-for="AgentNo" class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="AgentNo"></span>
             </div>
         </div>
         <!-- 生日 -->
@@ -43,7 +43,7 @@
             <label class="col-sm-2 col-form-label">電子信箱</label>
             <div class="col-sm-6">
                 <input class="form-control" asp-for="Email"/>
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Email"></span>
             </div>
         </div>
         <!-- 電話 -->
@@ -51,7 +51,7 @@
             <label class="col-sm-2 col-form-label">行動電話</label>
             <div class="col-sm-6">
                 <input class="form-control" asp-for="CellPhone"/>
-                <span asp-validation-for="CellPhone" class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="CellPhone"></span>
             </div>
         </div>
         <div class="btn-group mt-3" role="group">
@@ -63,5 +63,4 @@
 
 <partial name="~/Views/Shared/Scripts/_DatepickerScripts.cshtml" />
 <partial name="~/Views/Shared/Scripts/_ValidationScripts.cshtml" />
-<partial name="~/Views/Shared/Scripts/_ModalScripts.cshtml">
- 
+<partial name="~/Views/Shared/Scripts/_ModalScripts.cshtml" />
