--- a/Views/Agent/ImportExcel.cshtml
+++ b/Views/Agent/ImportExcel.cshtml
@@ -5,7 +5,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">上傳檔案</label>
             <div class="col-sm-6">
-                <input class="form-control-file" type="file" asp-for="ImportFile" />
+                <input class="form-control-file file-input" type="file" asp-for="ImportFile" />
                 <span class="text-danger" asp-validation-for="ImportFile"></span>
             </div>
         </div>
